cmake_minimum_required(VERSION 3.8)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES main.cpp dp/DpSolution.cpp array/ArraySolution.cpp)
#add_executable(leetcode ${SOURCE_FILES})

#add_executable(removeDup array/removeDup.cpp)
#add_executable(maxProfit array/maxProfit.cpp)
#add_executable(rotate array/rotate.cpp)
#add_executable(containsDuplicate array/containsDuplicate.cpp)
#add_executable(singleNumber array/singleNumber.cpp)
#add_executable(twoSum array/twoSum.cpp)
#add_executable(reverse string/reverse.cpp)
#add_executable(dp dp/DpSolution.cpp dp/DpSolution.h main.cpp)
add_executable(plusOne array/plusOne.cpp)